--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>EZ Cannabiz Consulting</h1>
-  <script src="js/app.js"></script>
+  <header>
+    <div class="logo noselect">
+      <span class="logo-text" id="ez">EZ</span><br>
+      <span class="logo-text logo-text-else">Cannabiz</span><br>
+      <span class="logo-text logo-text-else">Consulting</span>
+    </div>
+  <main>
+  </main>
+    <script src="js/app.js"></script>
+  </header>
 </body>
 </html>
