refactored logo, added contact

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>EZ Cannabiz Consulting</title>
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="logo noselect">
       <span class="logo-text" id="ez">EZ</span><br>
-      <span class="logo-text logo-text-else">Cannabiz</span><br>
-      <span class="logo-text logo-text-else">Consulting</span>
+      <span class="logo-text" id="cannabiz">CANNABIZ</span><br>
+      <span class="logo-text" id="consulting">CONSULTING</span>
     </div>
   <main>
+    <div class="contact">
+      For inquiries, contact <a href="mailto:jhuangsun@ezcannabizconsulting.com">jhuangsun@ezcannabizconsulting.com</a>
+    </div>
   </main>
     <script src="js/app.js"></script>
   </header>
