--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
       <span class="logo-text" id="cannabiz">CANNABIZ</span><br>
       <span class="logo-text" id="consulting">CONSULTING</span>
     </div>
+    <h3>Compliance, Tax Optimization, Intellectual Property and Customized Business Solutions</h3>  </h3>
   <main>
     <div class="contact">
       For inquiries, contact <a href="mailto:jhuangsun@ezcannabizconsulting.com">jhuangsun@ezcannabizconsulting.com</a>
     </div>
+    
   </main>
+    <script src="js/libs/jquery-3.3.1.min.js"></script>
     <script src="js/app.js"></script>
   </header>
 </body>
