refactored text in headline and contact

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <span class="logo-text" id="cannabiz">CANNABIZ</span><br>
       <span class="logo-text" id="consulting">CONSULTING</span>
     </div>
-    <h3>Compliance, Tax Optimization, Intellectual Property and Customized Business Solutions</h3>  </h3>
+    <h3>Compliance, Tax, Intellectual Property and Customized Business Solutions</h3>  </h3>
   <main>
     <div class="contact">
-      For inquiries, contact <a href="mailto:jhuangsun@ezcannabizconsulting.com">jhuangsun@ezcannabizconsulting.com</a>
+      For inquiries, please contact <a href="mailto:jhuangsun@ezcannabizconsulting.com">jhuangsun@ezcannabizconsulting.com</a>
     </div>
     
   </main>
